# kalman-estimator

./: Build-AVR.py  Build-PC.py  CMakeLists.txt  Readme.md
cmake/: toolchain-avr-gcc.cmake
doc/: Setup-Arduino-IDE-for-Pro-Trinket.md
example/: .gitignore  CMakeLists.txt  blink-led-avr.cpp  blink-led-isr-avr.cpp  fade-led-avr.cpp  kalman-sim-avr.cpp  kalman-sim.cpp  mk-blink-led-avr.bat  mk-blink-led-avr.py  mk-blink-led-isr-avr.py  mk-fade-led-avr.py  mk-input-adc-isr-avr.py  mk-kalman-class.bat  mk-kalman-sim-avr.bat  mk-kalman-sim-avr.py  mk-kalman-sim.bat  mk-kalman-sim.py
example/avr/: CMakeLists.txt  atmega328.cpp  avr-adc-dac-isr-atmega.cpp  avr-adc-dac-isr-atmega.e.cpp  avr-adc-isr.cpp  avr-blink-led-isr.cpp  avr-blink-led.cpp  avr-fade-led.cpp  avr-kalman-sim.cpp  input-adc-isr-avr.cpp  io-adc-dac-isr-avr-atmega.cpp  mk-atmega328.py  mk-avr-adc-dac-isr-atmega.e.py  mk-avr-adc-dac-isr-atmega.py  mk-avr-adc-isr.e.py  mk-avr-adc-isr.py  mk-avr-blink-led-isr.e.py  mk-avr-blink-led-isr.py  mk-avr-blink-led.e.py  mk-avr-blink-led.py  mk-avr-fade-led.e.py  mk-avr-fade-led.py  mk-avr-kalman-sim.py  mk-blink-led-avr.py  mk-blink-led-isr-avr.py  mk-fade-led-avr.py  mk-input-adc-isr-avr.py  mk-io-adc-dac-isr-avr-atmega.py  mk-kalman-sim-avr.py
example/desktop/: CMakeLists.txt  biquad-cascade.cpp  biquad-cascade.e.cpp  biquad-design.e.cpp  biquad.cpp  biquad.e.cpp  chebyshev-design.cpp  chebyshev-design.e.cpp  covariance-error.cpp  covariance-error.e.cpp  kalman-sim.cpp  kalman-sim.e.cpp  kalman-sim.out.txt  matrix.cpp  matrix.e.cpp  mk-kalman-sim.py  onepole-design.e.cpp  onepole.e.cpp  range.cpp  range.e.cpp
example/matlab/: kalman-sim.m  kalman.m
include/core/: core-io.hpp  core.hpp  range.hpp  shims.hpp  text.hpp  traits.hpp  vector-io.hpp
include/dsp/: biquad-cascade-io.hpp  biquad-cascade.hpp  biquad-design.hpp  biquad-io.hpp  biquad.hpp  chebyshev-design-io.hpp  chebyshev-design.hpp  filter-design.hpp  filter.hpp  kalman-io.hpp  kalman.hpp  onepole-design.hpp  onepole-io.hpp  onepole.hpp
include/mcu/: atmega328.hpp  register.hpp
include/num/: biquad-cascade.hpp  biquad.hpp  constants.hpp  fixed-point-io.hpp  fixed-point.hpp  kalman-io.hpp  kalman.hpp  matrix-io.hpp  matrix.hpp
include/std/: algorithm.hpp  complex.hpp  cstdint.hpp  limits.hpp  tuple.hpp  type_traits.hpp  utility.hpp
issue/: avr-issue-tpl-fun.b.cpp
project/CodeBlocks/: kalman-estimator.cbp  kalman-estimator.workspace
script/: avr-builtin.bat  avr-gcc-predefined.py  avr-gcc.py  avr-upload.py  avr.bat
test/: CMakeLists.txt  biquad-cascade.t.cpp  biquad.t.cpp  core.t.cpp  fixed-point.t.cpp  main-avr.t.cpp  main.t.cpp  matrix.t.cpp  stdcpp.t.cpp  t-avr.bat  t-avr.py  t.bat  tc.bat  tg.bat
time/: CMakeLists.txt  avr-kalman-time.cpp  kalman-time-avr.cpp  mk-avr-kalman-time.py  mk-kalman-time-avr.py
